# thesis-bot

./: .gitignore  main.py  pyproject.toml  readme.md  readme.txt
notebooks/: analyze_pitchdeck_alignment.ipynb  create_graph.ipynb  extract_theses_for_review.ipynb  load_theses_to_neo4j.ipynb
src/thesis_bot/: __init__.py  __main__.py  cli.py  config.py  schemas.py
src/thesis_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/thesis_bot/clients/: __init__.py  neo4j_client.py  openai_client.py
src/thesis_bot/io/: __init__.py  document_parsers.py  document_source.py  dropbox_source.py  pdf.py  review_csv.py  review_runs.py  source_loader.py
src/thesis_bot/pipelines/: __init__.py  extract_for_review.py  load_reviewed_theses.py
tests/: test_config.py  test_review_runs.py
