[project]
name = "thesis-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf>=1.23.0",
    "openai>=1.0.0",
    "neo4j>=5.0.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
]
